hook up with turnip exchange

--- a/src/app/component/list/list.component.html
+++ b/src/app/component/list/list.component.html
@@ -4,9 +4,9 @@
       <mat-radio-button value="buy">
         买萝卜
       </mat-radio-button>
-      <mat-radio-button value="sell">
-        卖萝卜
-      </mat-radio-button>
+      <!--<mat-radio-button value="sell">-->
+        <!--卖萝卜-->
+      <!--</mat-radio-button>-->
       <!--<mat-radio-button value="smith">-->
       <!--铁匠铺-->
       <!--</mat-radio-button>-->
@@ -14,7 +14,7 @@
   </section>
 
   <section fxLayoutAlign="end">
-    <button (click)="openCreateRoomModal()">我要开岛</button>
+    <!--<button (click)="openCreateRoomModal()">我要开岛</button>-->
   </section>
 </div>
 
