--- a/src/app/component/list/buy-turnip/buy-turnip.component.html
+++ b/src/app/component/list/buy-turnip/buy-turnip.component.html
@@ -1,33 +1,48 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
-  <ng-container matColumnDef="sw">
-    <th mat-header-cell *matHeaderCellDef> 岛主SW </th>
-    <td mat-cell *matCellDef="let element"> {{element.sw}} </td>
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef> 岛主 </th>
+    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="nickname">
-    <th mat-header-cell *matHeaderCellDef> ID </th>
-    <td mat-cell *matCellDef="let element"> {{element.nickname}} </td>
+  <ng-container matColumnDef="fruit">
+    <th mat-header-cell *matHeaderCellDef> 水果种类 </th>
+    <td mat-cell *matCellDef="let element"> {{element.fruit}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="price">
-    <th mat-header-cell *matHeaderCellDef> 萝卜价格 </th>
-    <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+  <ng-container matColumnDef="turnipPrice">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> 菜价 </th>
+    <td mat-cell *matCellDef="let element"> {{element.turnipPrice}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="openTime">
-    <th mat-header-cell *matHeaderCellDef> 开岛时间 </th>
-    <td mat-cell *matCellDef="let element"> {{element.openTime | date : 'shortTime'}} </td>
+  <ng-container matColumnDef="turnipCode">
+    <th mat-header-cell *matHeaderCellDef> turnipCode </th>
+    <td mat-cell *matCellDef="let element"> {{element.turnipCode}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="closeTime">
-    <th mat-header-cell *matHeaderCellDef> 关岛时间 </th>
-    <td mat-cell *matCellDef="let element"> {{element.closeTime | date : 'shortTime'}} </td>
+  <ng-container matColumnDef="hemisphere">
+    <th mat-header-cell *matHeaderCellDef> 半球 </th>
+    <td mat-cell *matCellDef="let element"> {{element.hemisphere}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="queueSize">
-    <th mat-header-cell *matHeaderCellDef> 排队人数 </th>
-    <td mat-cell *matCellDef="let element"> {{element.queueSize}} </td>
+  <ng-container matColumnDef="islandTime">
+    <th mat-header-cell *matHeaderCellDef> 岛上时间 </th>
+    <td mat-cell *matCellDef="let element"> {{element.islandTime | date}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="creationTime">
+    <th mat-header-cell *matHeaderCellDef> 建房时间 </th>
+    <td mat-cell *matCellDef="let element"> {{element.creationTime | date}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="description">
+    <th mat-header-cell *matHeaderCellDef> 描述 </th>
+    <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="queued">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> 排队人数 </th>
+    <td mat-cell *matCellDef="let element"> {{element.queued}} </td>
   </ng-container>
 
 
@@ -35,5 +50,6 @@
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"
       class="row-hover"
       style="cursor: pointer"
-      routerLink="/room"></tr>
+      (click)="goTo(row.turnipCode)"
+      ></tr>
 </table>
