--- a/src/app/component/list/buy-turnip/buy-turnip.component.html
+++ b/src/app/component/list/buy-turnip/buy-turnip.component.html
@@ -1,37 +1,43 @@
+<button (click)="fetchData()">刷新数据</button>
+
+<section>
+  <mat-checkbox *ngFor="let columnName of allColumns" [checked]="checkColumn(columnName)" (click)="toggleColumn($event,columnName)" style="margin-left: 1rem">{{columnName}}</mat-checkbox>
+</section>
+
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
   <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> 岛主 </th>
+    <th mat-header-cell *matHeaderCellDef class="text-center w-6"> 岛主 </th>
     <td mat-cell *matCellDef="let element"> {{element.name}} </td>
   </ng-container>
 
   <ng-container matColumnDef="fruit">
-    <th mat-header-cell *matHeaderCellDef> 水果种类 </th>
+    <th mat-header-cell *matHeaderCellDef class="text-center w-3"> 水果种类 </th>
     <td mat-cell *matCellDef="let element"> {{element.fruit}} </td>
   </ng-container>
 
   <ng-container matColumnDef="turnipPrice">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> 菜价 </th>
+    <th mat-header-cell *matHeaderCellDef class="text-center w-3" mat-sort-header> 菜价 </th>
     <td mat-cell *matCellDef="let element"> {{element.turnipPrice}} </td>
   </ng-container>
 
   <ng-container matColumnDef="turnipCode">
-    <th mat-header-cell *matHeaderCellDef> turnipCode </th>
+    <th mat-header-cell *matHeaderCellDef class="text-center w-5"> turnipCode </th>
     <td mat-cell *matCellDef="let element"> {{element.turnipCode}} </td>
   </ng-container>
 
   <ng-container matColumnDef="hemisphere">
-    <th mat-header-cell *matHeaderCellDef> 半球 </th>
+    <th mat-header-cell *matHeaderCellDef class="text-center w-3"> 半球 </th>
     <td mat-cell *matCellDef="let element"> {{element.hemisphere}} </td>
   </ng-container>
 
   <ng-container matColumnDef="islandTime">
-    <th mat-header-cell *matHeaderCellDef> 岛上时间 </th>
+    <th mat-header-cell *matHeaderCellDef class="text-center w-6"> 岛上时间 </th>
     <td mat-cell *matCellDef="let element"> {{element.islandTime | date}} </td>
   </ng-container>
 
   <ng-container matColumnDef="creationTime">
-    <th mat-header-cell *matHeaderCellDef> 建房时间 </th>
+    <th mat-header-cell *matHeaderCellDef class="text-center w-5"> 建房时间 </th>
     <td mat-cell *matCellDef="let element"> {{element.creationTime | date}} </td>
   </ng-container>
 
@@ -41,7 +47,7 @@
   </ng-container>
 
   <ng-container matColumnDef="queued">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> 排队人数 </th>
+    <th mat-header-cell *matHeaderCellDef class="text-center w-3" mat-sort-header> 排队人数 </th>
     <td mat-cell *matCellDef="let element"> {{element.queued}} </td>
   </ng-container>
 
