--- a/src/app/component/list/buy-turnip/buy-turnip.component.html
+++ b/src/app/component/list/buy-turnip/buy-turnip.component.html
@@ -1,8 +1,33 @@
-<button (click)="fetchData()">刷新数据</button>
 
-<section>
+<div fxLayout="row" fxLayoutAlign="flex-start center" fxLayoutGap="1rem">
+  <button (click)="fetchData()">刷新数据</button>
+
+  <mat-form-field >
+    <input matInput type="number" [(ngModel)]="dataRefreshRateSec" placeholder="数据刷新率(秒)">
+  </mat-form-field>
+
+  <mat-checkbox [(ngModel)]="autoRefresh">自动刷新数据</mat-checkbox>
+</div>
+
+
+<div fxLayout="row" fxLayoutAlign="flex-start center" fxLayoutGap="1rem">
   <mat-checkbox *ngFor="let columnName of allColumns" [checked]="checkColumn(columnName)" (click)="toggleColumn($event,columnName)" style="margin-left: 1rem">{{columnName}}</mat-checkbox>
-</section>
+</div>
+
+<div fxLayout="row"  fxLayoutAlign="flex-start center" fxLayoutGap="1rem">
+  <mat-form-field fxFlex="10%">
+    <input matInput type="text" (keyup)="descriptionFilter($event.target.value)" placeholder="描述过滤">
+  </mat-form-field>
+
+  <mat-form-field fxFlex="10%">
+    <input matInput type="number" (change)="updateDataSource()" [(ngModel)]="priceLowerBound" placeholder="菜价过滤(高于xx价格)">
+  </mat-form-field>
+  {{priceLowerBound}}
+
+  <mat-form-field fxFlex="10%">
+    <input matInput type="number" (change)="updateDataSource()" [(ngModel)]="queueUpperBound" placeholder="队列过滤(低于xx人)">
+  </mat-form-field>
+</div>
 
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
@@ -24,6 +49,11 @@
   <ng-container matColumnDef="turnipCode">
     <th mat-header-cell *matHeaderCellDef class="text-center w-5"> turnipCode </th>
     <td mat-cell *matCellDef="let element"> {{element.turnipCode}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="commerce">
+    <th mat-header-cell *matHeaderCellDef class="text-center w-5"> commerce </th>
+    <td mat-cell *matCellDef="let element"> {{element.commerce}} </td>
   </ng-container>
 
   <ng-container matColumnDef="hemisphere">
@@ -52,10 +82,10 @@
   </ng-container>
 
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns" class="bg-shade"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-      class="row-hover"
+      class="selectable-table-row"
       style="cursor: pointer"
       (click)="goTo(row.turnipCode)"
-      ></tr>
+  ></tr>
 </table>
