--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,30 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import './basic';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 table {width:100%;}
 
-
-.w-1 {
-  width: 1%;
-}
-.w-2 {
-  width: 2%;
-}
-.w-3 {
-  width: 3%;
-}
-
-.w-4 {
-  width: 4%;
-}
-
-.w-5 {
-  width: 5%;
-}
-.w-6 {
-  width: 6%;
-}
-.w-7 {
-  width: 7%;
-}
